--- a/package.json
+++ b/package.json
@@ -27,17 +27,64 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/server": "11.0.0",
+    "@emotion/styled": "^11.1.5",
+    "core-js": "^3.6.5",
+    "document-register-element": "1.13.1",
+    "next": "10.1.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
+    "@emotion/babel-plugin": "11.2.0",
     "@nrwl/cli": "12.0.4",
+    "@nrwl/cypress": "12.0.4",
+    "@nrwl/eslint-plugin-nx": "12.0.4",
+    "@nrwl/jest": "12.0.4",
+    "@nrwl/linter": "12.0.4",
+    "@nrwl/next": "^12.0.4",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "^12.0.4",
+    "@nrwl/storybook": "12.0.4",
     "@nrwl/tao": "12.0.4",
+    "@nrwl/web": "12.0.4",
     "@nrwl/workspace": "12.0.4",
+    "@storybook/addon-knobs": "^6.1.11",
+    "@storybook/react": "^6.1.11",
+    "@svgr/webpack": "^5.4.0",
+    "@testing-library/react": "11.2.6",
+    "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@types/webpack": "4.41.21",
+    "@types/webpack-merge": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
+    "babel-jest": "26.2.2",
+    "babel-loader": "8.1.0",
+    "cypress": "^6.0.1",
     "dotenv": "8.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "jest": "26.2.2",
     "prettier": "2.2.1",
+    "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
-    "typescript": "~4.1.4"
+    "typescript": "~4.1.4",
+    "url-loader": "^3.0.0",
+    "webpack-merge": "^4.2.1"
   }
 }
